# q

./: .env.test  .gitignore  CLAUDE.md  Cargo.toml  RAG_trace_feedback.md  README.md  ROADMAP.md  TODO.md  acp-tui.2025-12-01  config.dev.toml  config.example.toml  config.toml  config.toml.example  diff.out  docker-compose.test.yml  docker-compose.yml  filetree.md  flake.nix  gemini-feedback.md  jaeger-trace-partial.json  out.txt  project_structure.txt  test-error-handling.2025-11-29  test_config.json  tracing_best_practices.md  tracing_feedback_gemini.md  web_crawling_plan.md  write_binary.py
.claude/agents/: ml-architecture-advisor.md  rust-ml-developer.md
crates/acp-tui/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  build.rs
crates/acp-tui/src/: app.rs  client.rs  config.rs  error.rs  layout_manager.rs  lib.rs  main.rs  message.rs  models.rs  websocket.rs
crates/acp-tui/src/application/: mod.rs  state.rs  update.rs  view.rs
crates/acp-tui/src/components/: hitl_queue.rs  hitl_review.rs  mod.rs  status_line.rs  timeline.rs
crates/acp-tui/src/components/realm/: event_tree.rs  help.rs  hitl_queue.rs  hitl_review.rs  mod.rs  query_input.rs  root.rs  status_line.rs  timeline.rs
crates/acp-tui/src/models/: tree.rs
crates/acp-tui/src/services/: api.rs  mod.rs  query_executor.rs  websocket_manager.rs
crates/acp-tui/src/utils/: client_id.rs  event_logger.rs  formatting.rs  mod.rs  project.rs  terminal.rs  validation.rs
crates/agent-network/: Cargo.toml
crates/agent-network/src/: acp.rs  conflict.rs  coordination.rs  error.rs  execution_manager.rs  file_locks.rs  filelocks.rs  lib.rs  main.rs  mod.rs  orchestrator.rs  sharedcontext.rs  status_stream.rs  token_budget.rs  tracing_setup.rs
crates/agent-network/src/agents/: base.rs  coding.rs  evaluator.rs  mod.rs  planning.rs  pool.rs  writing.rs
crates/agent-network/src/hitl/: assessor.rs  audit.rs  mod.rs  queue.rs
crates/agent-network/src/llm/: mod.rs
crates/agent-network/src/rag/: context_builder.rs  mod.rs
crates/agent-network/src/tools/: filesystem.rs  git.rs  lsp.rs  mod.rs  treesitter.rs  web.rs
crates/agent-network/src/workflow/: analyzer.rs  builder.rs  executor.rs  mod.rs
crates/agent-network/tests/: agents_test.rs  filelock_test.rs  hitl_test.rs  orchestrator_test.rs  workflow_test.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  openapi.rs  server.rs  types.rs
crates/api/src/middleware/: logging.rs
crates/api/src/routes/: agents.rs  execute.rs  hitl.rs  mod.rs  query.rs  stream.rs  subscribe.rs
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  completions.rs  display.rs  interactive.rs  lib.rs  main.rs  oneshot.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  git.rs  lib.rs  llm.rs  tracing.rs  types.rs
crates/common/tests/: config_test.rs  types_test.rs
crates/history/: Cargo.toml
crates/history/src/: buffer_memory.rs  lib.rs  manager.rs  metadata.rs  patterns.rs  semantic_memory.rs  summarizer.rs
crates/indexing/: Cargo.toml
crates/indexing/src/: chunk_adaptive.rs  chunker.rs  classifier.rs  embedder.rs  lib.rs  metadata_chunk_transformer.rs  metadata_transformer.rs  pipeline.rs  storage.rs  watcher.rs
crates/indexing/tests/: classifier_test.rs  pipeline_test.rs  watcher_integration_test.rs
crates/indexing/tests/common/: mod.rs
crates/mcp-tools/: Cargo.toml
crates/mcp-tools/src/: filesystem.rs  git.rs  lib.rs  lsp.rs  treesitter.rs  web.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  main.rs
crates/orchestrator/src/agents/: coding.rs  mod.rs  orchestrator.rs  planning.rs  pool.rs  writing.rs
crates/orchestrator/src/coordination/: conflict.rs  file_locks.rs  mod.rs  shared_context.rs
crates/orchestrator/src/hitl/: assessor.rs  audit.rs  mod.rs  queue.rs
crates/orchestrator/src/workflow/: analyzer.rs  builder.rs  checkpoint.rs  executor.rs  mod.rs
crates/rag/: Cargo.toml
crates/rag/src/: context_manager.rs  context_providers.rs  lib.rs  query_enhancer.rs  reranker.rs  retriever.rs  searxng_client.rs  source_router.rs  web_crawler.rs
crates/rag/tests/: error_edge_case_tests.rs  query_enhancer_tests.rs  rag_integration_tests.rs  retriever_priority_tests.rs  retriever_tests.rs  searxng_integration_tests.rs  source_router_tests.rs  web_crawler_tests.rs  web_crawler_unit_tests.rs
crates/rag/tests/common/: mock_web_server.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  postgres.rs  qdrant.rs  redis.rs
crates/storage/tests/: postgres_test.rs  qdrant_test.rs  redis_test.rs
scripts/: run_tests.sh  test-indexer.sh
searxng/: settings.yml
src/: config.rs  db.rs  lib.rs  main.rs
src/db/: mod.rs
src/indexer/: chunking.rs  mod.rs  watcher.rs
src/indexer_bin/: main.rs
src/mcp_bin/: main.rs
src/search/: main.rs  mod.rs
src/tui_bin/: main.rs
test-workspace/: binary_search.py  test.md
