[package]
name = "semantic-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "semantic-indexer"
path = "src/indexer_bin/main.rs"

[[bin]]
name = "q"
path = "src/tui_bin/main.rs"

[[bin]]
name = "semantic-search-mcp"
path = "src/mcp_bin/main.rs"

[lib]
name = "semantic_search"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Swiftide ecosystem
swiftide = { version = "0.31", features = ["ollama", "qdrant", "tree-sitter"] }
swiftide-indexing = "0.31"
swiftide-integrations = { version = "0.31", features = ["ollama", "qdrant", "tree-sitter"] }

# Qdrant client
qdrant-client = "1.15"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# MCP (stub - update with actual version)
# mcp_sdk_rs = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.13"
