[workspace]
members = [
    "crates/common",
    "crates/indexing",
    "crates/rag",
    "crates/history",
    "crates/orchestrator",
    "crates/mcp-tools",
    "crates/storage",
    "crates/api",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "*", features = ["full"] }
tokio-util = "*"

# Agents & LLM
rig-core = "*"
graph-flow = "*"

# Vector DB & Embeddings
qdrant-client = "*"
fastembed = "*"

# Database
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = "*"
redis = { version = "*", features = ["tokio-comp"] }

# Indexing
swiftide = { version = "*", features = ["tree-sitter", "qdrant"] }
notify = "*"
tree-sitter = "*"

# Web & API
axum = { version = "*", features = ["ws"] }
tower = "*"
tower-http = { version = "*", features = ["trace", "cors"] }

# CLI
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
rustyline = "*"

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"

# Utilities
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }

# Graphs
petgraph = "*"

# Async
futures = "*"
async-trait = "*"

# LRU Cache
lru = "*"

# MCP
mcp-core = "*"  # Adjust version

# Collections
dashmap = "*"
