[package]
name = "ai-agent-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "*", features = ["v4", "serde"] }
reqwest = { version = "*", features = ["json", "rustls-tls"] }

# Core async runtime
futures = "*"
async-trait = "*"

# Graph and workflow
petgraph = "*"

# LLM integration
rig-core = {version = "*", features=["reqwest-rustls"]}

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"

# Error handling
anyhow = "*"
thiserror = "*"

# Logging and tracing
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

# Date/time
chrono = { version = "*", features = ["serde"] }

# Token management
tiktoken-rs = "*"

# Communication
axum = { version = "*", features = ["ws"] }
tower = "*"
tower-http = { version = "*", features = ["trace"] }


# Shared dependencies
ai-agent-common = { path = "../common" }
ai-agent-mcp-tools = { path = "../mcp-tools" }
ai-agent-rag = { path = "../rag" }
ai-agent-history = { path = "../history" }
env_logger = "*"
git2 = "*"


clap = { version = "*", features = ["derive", "env"] }

# OpenTelemetry Core (0.23+ for 2024-2025)
# Matching major/minor versions to avoid multiple versions conflict
opentelemetry = { version = "*", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio", "trace", "metrics"] }
tracing-opentelemetry = { version = "*" }
opentelemetry-otlp = { version = "*", features = ["tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "*"
once_cell = "*"
derive_more = {version = "*", features = ["display"]}

# opentelemetry-jaeger = "0.17.0"


[dev-dependencies]
tokio-test = "*"

[[bin]]
name = "agent-network"
path = "src/main.rs"
