[package]
name = "ai-agent-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "*", features = ["v4", "serde"] }
reqwest = { version = "*", features = ["json", "rustls-tls"] }

# Core async runtime
futures = "*"
async-trait = "*"

# Graph and workflow
petgraph = "*"

# LLM integration
ollama-rs = "*"

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"

# Error handling
anyhow = "*"
thiserror = "*"

# Logging and tracing
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

# Date/time
chrono = { version = "*", features = ["serde"] }

# Token management
tiktoken-rs = "*"

# Communication
axum = { version = "*", features = ["ws"] }
tower = "*"
tower-http = { version = "*", features = ["trace"] }


# Shared dependencies
ai-agent-common = { path = "../common" }
ai-agent-rag = { path = "../rag" }
ai-agent-history = { path = "../history" }
env_logger = "*"
git2 = "*"


clap = { version = "*", features = ["derive", "env"] }

derive_more = {version = "*", features = ["display"]}
schemars = { version = "*", features = ["chrono04"] }



[dev-dependencies]
tokio-test = "*"

[[bin]]
name = "agent-network"
path = "src/main.rs"
