[package]
name = "ai-agent-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
rustyline = "*"
serde = "*"
anyhow = "*"
reqwest = {version="*", features = ["json"] }  # Add this line
