[package]
name = "ai-agent-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
schemars = "*"
swiftide = { version = "*", features = ["ollama", "qdrant", "tree-sitter", "fastembed", "redis"] }
swiftide-indexing = "*"
swiftide-integrations = { version = "*", features = ["ollama", "qdrant"] }
tracing = "*"
fastembed = "*"
derive_builder = "*"
derive_more = {version = "*", features = ["display"]}

[dev-dependencies]
tempfile = "3"
