[package]
name = "ai-agent-history"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = "0.4"
lru = "0.12"
serde = "1.0"
async-trait = "0.1"
rig-core = "0.3"
anyhow = "1.0"
