[package]
name = "ai-agent-history"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = "*"
lru = "*"
serde = "*"
async-trait = "*"
rig-core = "*"
anyhow = "*"
