[package]
name = "ai-agent-indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
tokio = { version = "*", features = ["full"] }
notify = "*"
tree-sitter = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
qdrant-client = "*"
serde = "*"
serde_json = "*"
anyhow = "*"
async-trait = "*"
tracing = "*"
ignore = "*"
mime_guess = "*"
dirs = "*"
tree-sitter = "*"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-javascript = "*"
tree-sitter-typescript = "*"
once_cell = "*"  # For lazy static parsers

[dev-dependencies]
tempfile = "*"
tokio-test = "*"
mime_guess = "*"
dirs = "*"
