[package]
name = "ai-agent-indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
ai-agent-storage = { path = "../storage" }
tokio = { version = "*", features = ["full"] }
notify = "*"
tree-sitter = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
qdrant-client = "*"
serde = "*"
serde_json = "*"
anyhow = "*"
async-trait = "*"
tracing = "*"
ignore = "*"
mime_guess = "*"
dirs = "*"
# Swiftide with correct features
swiftide = { version = "*", features = ["ollama", "qdrant", "tree-sitter", "fastembed"] }
swiftide-indexing = "*"
swiftide-integrations = { version = "*", features = ["ollama", "qdrant"] }

[dev-dependencies]
tempfile = "*"
tokio-test = "*"
mime_guess = "*"
dirs = "*"
