[package]
name = "ai-agent-indexing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[dependencies]
ai-agent-common = { path = "../common" }
ai-agent-storage = { path = "../storage" }
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
notify = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
qdrant-client = "*"
serde = "*"
serde_json = "*"
anyhow = "*"
async-trait = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
ignore = "*"
mime_guess = "*"
dirs = "*"
walkdir = "*"
# Swiftide with correct features
swiftide = { version = "*", features = ["ollama", "qdrant", "tree-sitter", "fastembed", "redis"] }
fastembed = "*"
swiftide-indexing = "*"
swiftide-integrations = { version = "*", features = ["ollama", "qdrant"] }
redis = "*"
toml = "*"
clap = { version = "*", features = ["derive"] }  # â† "derive" feature is crucial
derive_builder = "*"
# supported tree-sitter languages
tree-sitter = "*"
tree-sitter-rust = "*"
tree-sitter-python = "*"
tree-sitter-javascript = "*"
tree-sitter-typescript = "*"
tree-sitter-java = "*"
tree-sitter-c = "*"
tree-sitter-cpp = "*"
tree-sitter-go = "*"
tree-sitter-haskell = "*"
tree-sitter-lua = "*"
tree-sitter-yaml = "*"
tree-sitter-bash = "*"
tree-sitter-html = "*"
tree-sitter-json = "*"
tree-sitter-ruby = "*"
tree-sitter-asciidoc = "*"
tree-sitter-xml = "*"
# tree-sitter-dockerfile = "*"
tree-sitter-md = "*"
tree-sitter-yarn = "*"
repo-root = "*"
strum = "*"


[dev-dependencies]
tempfile = "*"
tokio-test = "*"
mime_guess = "*"
dirs = "*"
redis = "*"

