[package]
name = "ai-agent-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
tokio = { version = "*", features = ["full"] }
petgraph = "*"
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
anyhow = "*"
serde = "*"
tracing = "*"
rig-core = "*"           # Rig agent system
chrono = "*"             # Date utilities
uuid = { version = "*", features = ["v4", "serde"] }
serde_json = "*"
async-trait = "*"
tracing-subscriber = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
