[package]
name = "ai-agent-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
ai-agent-storage = { path = "../storage" }
tokio = { version = "*", features = ["full"] }
fastembed = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
qdrant-client = "*"
serde = "*"
anyhow = "*"
rig-core = "*"
async-trait = "*"
async-recursion = "*"
async-stream = "*"
futures = "*"
petgraph = "*"
moka = { version = "*", features = ["future"] }
tokenizers = "*"
sha2 = "*"
