[package]
name = "ai-agent-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = "*"
qdrant-client = "*"
redis = { version = "*", features = ["tokio-comp"] }
tokio = { version = "*", features = ["full"] }
serde = "*"
serde_json = "*"
anyhow = "*"
