[package]
name = "ai-agent-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-common = { path = "../common" }
sqlx = { version = "*", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = "*"
qdrant-client = "*"
redis = { version = "*", features = ["tokio-comp"] }
tokio = { version = "*", features = ["full"] }
serde = "*"
serde_json = "*"
anyhow = "*"
tracing = "*"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = "*"             # Date utilities


[dev-dependencies]
tokio = {version="*", features = ["macros", "rt-multi-thread"] }
uuid = {version="*", features = ["v4"] }
